# generic-opencl-sdk

./: CMakeLists.txt  FindOpenCL.cmake  README.md
src/: CMakeLists.txt
src/AsyncDMA/: AsyncDMA.cpp  AsyncDMA.hpp  CMakeLists.txt
